[EFL] [DRT] keyboard-related tests do not pass https://bugs.webkit.org/show_bug.cgi?id=85369

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-05-24
Reviewed by Gustavo Noronha Silva.

Tools:

Add SHIFT modifier for capital letters as VK_
codes do not distinguish between lows and caps and also to be consistent
with other ports which send caps as lowercase letters with the shift key down.

* DumpRenderTree/efl/EventSender.cpp:
(keyNameFromJSValue):

LayoutTests:

* platform/efl/Skipped: Unskipped keyboard-related tests.

Canonical link: https://commits.webkit.org/105172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118404 268f45cc-cd09-0410-ab3c-d52691b4dbfc